force-app/main/default/objects/Apttus__ComplySystemProperties__c/fields/Apttus_CMDSign__SelectAllAttachments__c.field-meta.xml
<CustomField>
    <fullName>Apttus_CMDSign__SelectAllAttachments__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, all the attachments listed on the user interface will be selected.</description>
    <inlineHelpText>If checked, all the attachments listed on the user interface will be selected.</inlineHelpText>
    <label>Select All Attachments</label>
    <type>Checkbox</type>
</CustomField>