force-app/main/default/objects/Apttus__ComplySystemProperties__c/fields/Apttus_CMDSign__SelectAttachmentsFromRSPCAgreements__c.field-meta.xml
<CustomField>
    <fullName>Apttus_CMDSign__SelectAttachmentsFromRSPCAgreements__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether attachments will be selected from related, sibling, parent and child agreements</description>
    <inlineHelpText>Indicates whether attachments will be selected from related, sibling, parent and child agreements</inlineHelpText>
    <label>Select Attachments From Related/Sibling</label>
    <type>Checkbox</type>
</CustomField>