force-app/main/default/objects/Apttus__ComplySystemProperties__c/fields/Apttus_CMDSign__UpdateRSPCAgreementStatus__c.field-meta.xml
<CustomField>
    <fullName>Apttus_CMDSign__UpdateRSPCAgreementStatus__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Update the selected related/sibling/parent/child agreement status category/status values along with the primary agreement i.e. the agreement being sent for eSignature. This setting is used only when the &quot;Select Attachments From Related/Sibling&quot; setting is checked.</description>
    <inlineHelpText>Update the selected related/sibling/parent/child agreement status category/status values along with primary agreement i.e. the agreement being sent for eSignature. This setting is used when the &quot;Select Attachments From Related/Sibling&quot; setting is checked.</inlineHelpText>
    <label>Update RSPC Agreement Status</label>
    <type>Checkbox</type>
</CustomField>